--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <script src="sketch.js"></script>
+    <script src="logic.js"></script>
+    <script src="visuals.js"></script>
   
 
 </body></html>
