--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 
   </head>
   <body>
+    <div class="leftDiv">
+      <input class="slider" id="sliderMF" type="range" min="1" max="2" step="0.25">
+      <h3 style="color: #C8C8C8; font-family: Helvetica; font-weight: lighter;">Board Size</h3>
+    </div>
+    <div class="rightDiv">
+      <input class="slider" id="sliderBD" type="range" min="0" max="1" step="0.1">
+      <h3 style="color: #C8C8C8; font-family: Helvetica; font-weight: lighter;">Bomb Density</h3>
+    </div>
+    <h1 id="endScreen" style="text-align: center; font-family: Helvetica; font-weight: lighter;">...</h1>
     <script src="Sketch.js"></script>
     <script src="Logic.js"></script>
     <script src="Visuals.js"></script>
