--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
   <body>
     <div class="leftDiv">
       <input class="slider" id="sliderMF" type="range" min="1" max="2" step="0.25">
+      <script>document.getElementById("sliderMF").value = 1.25</script>
       <h3 style="color: #C8C8C8; font-family: Helvetica; font-weight: lighter;">Board Size</h3>
     </div>
     <div class="rightDiv">
       <input class="slider" id="sliderBD" type="range" min="0" max="1" step="0.1">
+      <script>document.getElementById("sliderBD").value = 0.3</script>
       <h3 style="color: #C8C8C8; font-family: Helvetica; font-weight: lighter;">Bomb Density</h3>
     </div>
-    <h1 id="endScreen" style="text-align: center; font-family: Helvetica; font-weight: lighter;">...</h1>
+    <h1 id="endScreen1" style="text-align: center; font-family: Helvetica; font-weight: lighter;">...</h1>
+    <h2 id="endScreen2" style="text-align: center; font-family: Helvetica; font-weight: lighter;">...</h2>
     <script src="Sketch.js"></script>
     <script src="Logic.js"></script>
     <script src="Visuals.js"></script>
